--- a/travelus/MainStoryboard~iphone.storyboard
+++ b/travelus/MainStoryboard~iphone.storyboard
@@ -89,20 +89,20 @@
             </objects>
             <point key="canvasLocation" x="534" y="-567"/>
         </scene>
-        <!--Table View Controller - 日期-->
+        <!--Date List View Controller - 日期-->
         <scene sceneID="Vg5-L8-rkq">
             <objects>
-                <tableViewController id="39n-m5-1Md" sceneMemberID="viewController">
-                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="YNB-hk-VJb">
+                <tableViewController id="39n-m5-1Md" customClass="RCDateListViewController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="singleLineEtched" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="YNB-hk-VJb">
                         <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="YI2-QH-J6L">
-                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="gray" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="DateListCell" id="YI2-QH-J6L">
+                                <rect key="frame" x="0.0" y="46" width="320" height="46"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <rect key="frame" x="10" y="1" width="280" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
@@ -110,7 +110,11 @@
                         </prototypes>
                     </tableView>
                     <navigationItem key="navigationItem" title="日期" id="tlK-eU-pRx">
-                        <barButtonItem key="leftBarButtonItem" title="back" id="h4y-Uh-XW4"/>
+                        <barButtonItem key="leftBarButtonItem" title="back" id="h4y-Uh-XW4">
+                            <connections>
+                                <action selector="back:" destination="39n-m5-1Md" id="EUV-9F-khM"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3Pd-Jo-IZh" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -136,6 +140,12 @@
         </scene>
     </scenes>
     <classes>
+        <class className="RCDateListViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/RCDateListViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="back:"/>
+            </relationships>
+        </class>
         <class className="RCMainViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/RCMainViewController.h"/>
             <relationships>
